--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1206,16 +1206,20 @@ workflows:
       - lint
       - spm-release-build-xcode-14:
           xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-release-build-xcode-15:
           xcode_version: '15.2'
       - spm-xcode-14-1:
           xcode_version: '14.1.0'
+          swiftlint_version: '0.53.0'
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
           xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-16:
           xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-17:
           xcode_version: '15.2'
       - spm-revenuecat-ui-watchos
@@ -1224,19 +1228,24 @@ workflows:
           xcode_version: '15.2'
       - run-test-ios-16:
           xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-15:
           xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-watchos
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
       - run-test-ios-14:
           xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-13:
           xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
           <<: *release-branches-and-main
       - run-test-ios-12:
           xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
           <<: *release-branches-and-main
       - build-tv-watch-and-macos
       - build-visionos
