Fixes for swiftlint from main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,10 @@ aliases:
     parameters:
       xcode_version:
         type: string
-        default: "15.3"
+        default: '15.3'
+      swiftlint_version:
+        type: string
+        default: ""
     environment:
       CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
@@ -122,9 +125,9 @@ commands:
       install_xcbeautify:
         type: boolean
         default: true
-      install_mint:
-        type: boolean
-        default: false
+      swiftlint_version:
+        type: string
+        default: ""
     steps:
       - install-bundle-dependencies:
           directory: << parameters.directory >>
@@ -137,12 +140,22 @@ commands:
             - install-brew-dependency:
                 dependency_name: "xcbeautify"
       - install-brew-dependency:
-          dependency_name: "swiftlint"
+          dependency_name: 'mint'
       - when:
-          condition: << parameters.install_mint >>
+          condition:
+            not:
+              equal: ["", << parameters.swiftlint_version >>]
+          steps:
+            - run:
+                name: Install swiftlint@<< parameters.swiftlint_version >> using Mint 
+                command: |
+                  mint install realm/swiftlint@<< parameters.swiftlint_version >>
+      - when:
+          condition:
+            equal: ["", << parameters.swiftlint_version >>]
           steps:
             - install-brew-dependency:
-                dependency_name: "mint"
+                dependency_name: 'swiftlint'
       - run: brew tap robotsandpencils/made
       - save_cache:
           key: homebrew-cache-{{ checksum "Brewfile.lock.json" }}-{{ arch }}
@@ -436,7 +449,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Tests
@@ -461,7 +475,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Release Build
@@ -593,7 +608,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -623,7 +639,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -689,8 +706,8 @@ jobs:
     steps:
       - checkout
       - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
           install_xcbeautify: false
-          install_mint: true
       - install-xcbeautify-for-xcode14
       - update-spm-installation-commit
       - install-runtime:
@@ -720,7 +737,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          swiftlint_version: << parameters.swiftlint_version >>
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 13.7
@@ -1140,22 +1158,28 @@ workflows:
       - run-test-ios-17:
           xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-14:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-13:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
       - run-test-macos
 
   generate_revenuecatui_snapshots:
     when: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - spm-revenuecat-ui-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-17:
           xcode_version: "15.2"
 
@@ -1169,17 +1193,21 @@ workflows:
     jobs:
       - lint
       - spm-release-build-xcode-14:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-release-build-xcode-15:
           xcode_version: "15.2"
       - spm-xcode-14-1:
-          xcode_version: "14.1.0"
+          xcode_version: '14.1.0'
+          swiftlint_version: '0.53.0'
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - spm-revenuecat-ui-ios-17:
           xcode_version: "15.2"
       - spm-revenuecat-ui-watchos
@@ -1187,17 +1215,21 @@ workflows:
       - run-test-ios-17:
           xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          swiftlint_version: '0.53.0'
       - run-test-watchos
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
       - run-test-ios-14:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
       - run-test-ios-13:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          swiftlint_version: '0.53.0'
           <<: *release-branches-and-main
       - build-tv-watch-and-macos
       - build-visionos
