--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,15 +141,15 @@ commands:
                 dependency_name: "xcbeautify"
       - install-brew-dependency:
           dependency_name: 'mint'
-      - when:
-          condition:
-            not:
-              equal: ["", << parameters.swiftlint_version >>]
-          steps:
-            - run:
-                name: Install swiftlint@<< parameters.swiftlint_version >> using Mint 
-                command: |
-                  mint install realm/swiftlint@<< parameters.swiftlint_version >>
+      # - when:
+      #     condition:
+      #       not:
+      #         equal: ["", << parameters.swiftlint_version >>]
+      #     steps:
+      #       - run:
+      #           name: Install swiftlint@<< parameters.swiftlint_version >> using Mint 
+      #           command: |
+      #             mint install realm/swiftlint@<< parameters.swiftlint_version >>
       - when:
           condition:
             equal: ["", << parameters.swiftlint_version >>]
