--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,10 @@ aliases:
     parameters:
       xcode_version:
         type: string
-        default: "15.3"
+        default: '15.3'
+      install_swiftlint:
+        type: boolean
+        default: true
     environment:
       CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
@@ -125,6 +128,9 @@ commands:
       install_mint:
         type: boolean
         default: false
+      install_swiftlint:
+        type: boolean
+        default: true
     steps:
       - install-bundle-dependencies:
           directory: << parameters.directory >>
@@ -136,13 +142,16 @@ commands:
           steps:
             - install-brew-dependency:
                 dependency_name: "xcbeautify"
-      - install-brew-dependency:
-          dependency_name: "swiftlint"
       - when:
           condition: << parameters.install_mint >>
           steps:
             - install-brew-dependency:
                 dependency_name: "mint"
+      - when:
+          condition: << parameters.install_swiftlint >>
+          steps:
+            - install-brew-dependency:
+                dependency_name: "swiftlint"
       - run: brew tap robotsandpencils/made
       - save_cache:
           key: homebrew-cache-{{ checksum "Brewfile.lock.json" }}-{{ arch }}
@@ -436,7 +445,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Tests
@@ -461,7 +471,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Release Build
@@ -495,7 +506,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Release Build
@@ -569,7 +581,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - run:
           name: Run tests
           command: bundle exec fastlane test_ios
@@ -593,7 +606,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -623,7 +637,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -691,6 +706,7 @@ jobs:
       - install-dependencies:
           install_xcbeautify: false
           install_mint: true
+          install_swiftlint: << parameters.install_swiftlint >>
       - install-xcbeautify-for-xcode14
       - update-spm-installation-commit
       - install-runtime:
@@ -720,7 +736,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 13.7
@@ -1140,22 +1157,28 @@ workflows:
       - run-test-ios-17:
           xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-14:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-ios-13:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-macos
 
   generate_revenuecatui_snapshots:
     when: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - spm-revenuecat-ui-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-17:
           xcode_version: "15.2"
 
@@ -1169,17 +1192,20 @@ workflows:
     jobs:
       - lint
       - spm-release-build-xcode-14:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-release-build-xcode-15:
           xcode_version: "15.2"
       - spm-xcode-14-1:
-          xcode_version: "14.1.0"
+          xcode_version: '14.1.0'
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-17:
           xcode_version: "15.2"
       - spm-revenuecat-ui-watchos
@@ -1187,17 +1213,21 @@ workflows:
       - run-test-ios-17:
           xcode_version: "15.2"
       - run-test-ios-16:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-15:
-          xcode_version: "14.3.0"
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-watchos
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
       - run-test-ios-14:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-ios-13:
-          xcode_version: "14.2.0"
+          xcode_version: '14.2.0'
+          install_swiftlint: false
           <<: *release-branches-and-main
       - build-tv-watch-and-macos
       - build-visionos
