Retry backend integration tests (#3902)
This is "ready for review" but it requires
https://github.com/RevenueCat/purchases-ios/pull/3833 to be merged into
it first to fully pass

Prevent the need to fully rerun all backend tests job when only a few
flaky tests fail

1. Runs backend integration tests
    - Parses junit.xml for failed tests
    - Writes them to a file
2. Runs new step in CircleCI
    - Looks at file for tests to re-run and only runs those tests
    - Merges new junit.xml into original junit.xml

The retry happens 4 times right now and will fail (raise an error) if
there are any left over tests that never ended up passing

---------

Co-authored-by: Will Taylor <wtaylor151@gmail.com>
Co-authored-by: Andy Boedo <andresboedo@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,7 +386,7 @@ commands:
           command: bundle exec fastlane retry_failed_tests retry_attempt:4 fail_build:true
           no_output_timeout: 5m
           environment:
-            SCAN_DEVICE: iPhone 15 Pro (17.4.0)
+            SCAN_DEVICE: iPhone SE (17.4.0)
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: BackendIntegrationTests
@@ -739,11 +739,7 @@ jobs:
     steps:
       - checkout
       - install-dependencies:
-          install_xcbeautify: false
-          install_mint: true
           install_swiftlint: << parameters.install_swiftlint >>
-      - macos/install-rosetta
-      - install-xcbeautify-for-xcode14
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 13.7
@@ -1167,6 +1163,7 @@ workflows:
           install_swiftlint: false
       - run-test-ios-13:
           xcode_version: "14.2.0"
+          install_swiftlint: false
       - run-test-macos
 
   generate_revenuecatui_snapshots:
