Retry backend integration tests (#3902)
This is "ready for review" but it requires
https://github.com/RevenueCat/purchases-ios/pull/3833 to be merged into
it first to fully pass

Prevent the need to fully rerun all backend tests job when only a few
flaky tests fail

1. Runs backend integration tests
    - Parses junit.xml for failed tests
    - Writes them to a file
2. Runs new step in CircleCI
    - Looks at file for tests to re-run and only runs those tests
    - Merges new junit.xml into original junit.xml

The retry happens 4 times right now and will fail (raise an error) if
there are any left over tests that never ended up passing

---------

Co-authored-by: Will Taylor <wtaylor151@gmail.com>
Co-authored-by: Andy Boedo <andresboedo@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,12 +150,12 @@ commands:
           condition: << parameters.install_xcbeautify >>
           steps:
             - install-brew-dependency:
-                dependency_name: 'xcbeautify'
+                dependency_name: "xcbeautify"
       - when:
           condition: << parameters.install_mint >>
           steps:
             - install-brew-dependency:
-                dependency_name: 'mint'
+                dependency_name: "mint"
       - when:
           condition: << parameters.install_swiftlint >>
           steps:
@@ -361,7 +361,31 @@ commands:
           command: bundle exec fastlane backend_integration_tests test_plan:"<< parameters.test_plan >>"
           no_output_timeout: 5m
           environment:
-            SCAN_DEVICE: iPhone 14 (17.2.0)
+            SCAN_DEVICE: iPhone 15 (17.4.0)
+      - run:
+          name: Run RETRY 1 (of 4) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:1
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 15 Pro (17.4.0)
+      - run:
+          name: Run RETRY 2 (of 4) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:2
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 15 Pro Max (17.4.0)
+      - run:
+          name: Run RETRY 3 (of 4) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:3
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone 15 Plus (17.4.0)
+      - run:
+          name: Run RETRY 4 (of 4) backend_integration Tests
+          command: bundle exec fastlane retry_failed_tests retry_attempt:4 fail_build:true
+          no_output_timeout: 5m
+          environment:
+            SCAN_DEVICE: iPhone SE (17.4.0)
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: BackendIntegrationTests
