--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1281,8 +1281,7 @@ workflows:
           <<: *release-branches
       - installation-tests-cocoapods:
           <<: *release-branches
-      - installation-tests-swift-package-manager:
-          <<: *release-branches
+      - installation-tests-swift-package-manager
       - installation-tests-custom-entitlement-computation-swift-package-manager:
           <<: *release-branches
       - installation-tests-receipt-parser:
