--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,8 @@ commands:
     steps:
       - install-brew-dependency:
           dependency_name: 'xcodes'
+      - install-brew-dependency:
+          dependency_name: 'aria2'
       - run:
           name: Install simulator
           command: | # Print all available simulators and install required one
@@ -1171,5 +1173,4 @@ workflows:
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - run-test-ios-13:
-          xcode_version: '14.2.0'
           install_swiftlint: false
