specifically create simulator

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -719,12 +719,13 @@ jobs:
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 13.7
+      - run: xcrun simctl create "iPhone 11 with iOS 13.7" "iPhone 11" iOS13.7
       - run:
           name: Run tests
           command: bundle exec fastlane test_ios
           no_output_timeout: 5m
           environment:
-            SCAN_DEVICE: iPhone 13 (13.7)
+            SCAN_DEVICE: iPhone 11 (13.7)
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: RevenueCat
