--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -661,10 +661,6 @@ jobs:
           name: Run tests
           command: bundle exec fastlane test_watchos
           no_output_timeout: 5m
-          environment:
-            SCAN_PLATFORM: watchOS Simulator
-            SCAN_DEVICE: Apple Watch Series 9 (45mm) (10.4)
-            BUILD_SDK: watchsimulator
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/watchos
           bundle_name: RevenueCat
@@ -1231,7 +1227,8 @@ workflows:
       - run-test-ios-15:
           xcode_version: '14.3.0'
           install_swiftlint: false
-      - run-test-watchos
+      - run-test-watchos:
+          xcode_version: '14.3.0'
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
@@ -1239,7 +1236,7 @@ workflows:
           xcode_version: '14.2.0'
           install_swiftlint: false
       - run-test-ios-13:
-          xcode_version: '15.2'
+          xcode_version: '14.2.0'
           install_swiftlint: false
           <<: *release-branches-and-main
       - run-test-ios-12:
