--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1159,12 +1159,8 @@ jobs:
             git push --tags
 
   deploy-to-spm-fastlane:
-    docker:
-      - image: cimg/ruby:3.1.2
-    working_directory: ~/purchases-ios
-    shell: /bin/bash --login -o pipefail
+    <<: *base-job
     steps:
-      - install-rubydocker-dependencies
       - run:
           name: Clone purchases-ios and push to purchases-ios-spm
           command: bundle exec fastlane deploy_to_spm
