Fix prepare next version job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -894,6 +894,7 @@ jobs:
   prepare-next-version:
     <<: *base-job
     steps:
+      - setup-git-credentials
       - checkout
       - install-dependencies
       - trust-github-key
