--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -387,16 +387,7 @@ commands:
           destination: scan-test-output
 
 jobs:
-  spm-release-build-xcode-14:
-    <<: *base-job
-    steps:
-      - checkout
-      - run:
-          name: SPM Release Build
-          command: swift build -c release --target RevenueCat
-          no_output_timeout: 30m
-
-  spm-release-build-xcode-15:
+  spm-release-build:
     <<: *base-job
     steps:
       - checkout
@@ -426,19 +417,6 @@ jobs:
       - run:
           name: SPM Receipt Parser
           command: swift build -c release --target ReceiptParser
-          no_output_timeout: 30m
-
-  spm-xcode-14-1:
-    <<: *base-job
-    steps:
-      - checkout
-      - run:
-          name: SPM RevenueCat Release Build
-          command: swift build -c release --target RevenueCat
-          no_output_timeout: 30m
-      - run:
-          name: SPM RevenueCatUI Release Build
-          command: swift build -c release --target RevenueCatUI
           no_output_timeout: 30m
 
   spm-revenuecat-ui-ios-15:
@@ -1191,13 +1169,7 @@ workflows:
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - lint
-      - spm-release-build-xcode-14:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - spm-release-build-xcode-15:
-          xcode_version: "15.2"
-      - spm-xcode-14-1:
-          xcode_version: '14.1.0'
+      - spm-release-build
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
